# IngameIME_Win32

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TextServiceFramework.sln  libtf.cpp  run-format.py
.github/: release-drafter.yaml
.github/workflows/: CI.yaml  release-drafter.yaml
AppTSF_TestWindow/: AppTSF_TestWindow.cpp  AppTSF_TestWindow.h  AppTSF_TestWindow.rc  AppTSF_TestWindow.vcxproj  AppTSF_TestWindow.vcxproj.filters  InputMethod.cpp  InputMethod.h  Resource.h  TextBox.cpp  TextBox.h
AppTSF_TestWindow_WPF/: App.xaml  App.xaml.cs  AppTSF_TestWindow_WPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
AppTSF_TestWindow_WPF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AppWrapper_TestWindow/: AppWrapper_TestWindow.csproj  Form1.Designer.cs  Form1.cs  Program.cs
AppWrapper_TestWindow/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  TestItem2.cpp  TestItem2.h
cmake/modules/: GetGitRevisionDescription.cmake
docs/: Doc.md  TSF-Context.uxf  TSF-Sequence.uxf
include/: Application.hpp  COMBase.hpp  CandidateListHandler.hpp  Common.hpp  CompositionEventArgs.hpp  DebugMsg.h  Document.hpp  FormatUtil.hpp  Singleton.hpp  UIElementEventArgs.hpp  UIElementSink.hpp
include/common/: InputContextImpl.hpp  InputProcessorImpl.hpp
include/imm/: ImmCompositionImpl.hpp  ImmIngameIMEImpl.hpp  ImmInputContextImpl.hpp
include/ingameime-win32/: FormatUtil.hpp
include/ingameime-win32/tf/: TfIngameIMEImpl.hpp  TfInputProcessorImpl.hpp
include/tf/: ComBSTR.hpp  ComException.hpp  ComObjectBase.hpp  ComPtr.hpp  IThreadAssociate.hpp  TfCompositionHandler.hpp  TfCompositionImpl.hpp  TfContextOwner.hpp  TfFunction.hpp  TfInputContextImpl.hpp  TfInputModeHandler.hpp  TfInputProcessorImpl.hpp
libtf/: Application.hpp  COMBase.h  COMBase.hpp  CandidateListHandler.h  CandidateListHandler.hpp  Common.hpp  CompositionEventArgs.cpp  CompositionEventArgs.h  CompositionEventArgs.hpp  Context.cpp  Context.h  ContextOwner.cpp  ContextOwner.h  ContextOwnerCompositionSink.cpp  ContextOwnerCompositionSink.h  ContextOwnerCompositionSink.hpp  Document.cpp  Document.h  Document.hpp  PropertySheet.props  Test.cpp  TextEditSink.cpp  TextEditSink.h  TextStore.cpp  TextStore.h  UIElementEventArgs.cpp  UIElementEventArgs.h  UIElementEventArgs.hpp  UIElementSink.cpp  UIElementSink.h  UIElementSink.hpp  cpp.hint  dllmain.cpp  libtf.rc  libtf.vcxproj  libtf.vcxproj.filters  resource.h  tf_application.cpp  tf_application.h  tf_common.cpp  (+3 more)
libtfWrapper/: AppWrapper.cpp  AppWrapper.h  CandidateListWrapper.cpp  CandidateListWrapper.h  CompositionHandler.cpp  CompositionHandler.h  Delegate.h  libtfWrapper.rc  libtfWrapper.vcxproj  libtfWrapper.vcxproj.filters  resource.h
src/: CandidateListHandler.hpp  ComBSTR.cpp  ComException.cpp  ComObjectBase.cpp  CommitHandler.hpp  CompositionHandler.hpp  ConversionModeHandler.hpp  DebugMsg.cpp  FormatUtil.cpp  FullScreenUIElementHandler.hpp  ICallback.hpp  IThreadAssociate.cpp  IThreadAssociate.hpp  ImmCompositionImpl.cpp  ImmIngameIMEImpl.cpp  ImmInputContextImpl.cpp  IngameIMEImpl.cpp  InputContext.hpp  InputContextImpl.cpp  InputProcessorHandler.hpp  InputProcessorImpl.cpp  SentenceModeHandler.hpp  TfCompositionHandler.cpp  TfCompositionImpl.cpp  TfContextOwner.cpp  TfFunction.cpp  TfFunction.hpp  TfIngameIMEImpl.cpp  TfInputContextImpl.cpp  TfInputModeHandler.cpp  TfInputProcessorImpl.cpp  TfThread.hpp  libtf.cpp  libtf.h  libtfdef.h  version.cpp.in
src/include/: ComBSTR.hpp  ComException.hpp  ComObjectBase.hpp  ComPtr.hpp  CompositionImpl.hpp  DebugMsg.h  FormatUtil.hpp  FullScreenUIElementHandler.hpp  IThreadAssociate.hpp  InputContext.hpp  InputContextImpl.hpp  InputProcessorHandler.hpp  InputProcessorImpl.hpp  TfFunction.hpp  libtf.h  libtfdef.h
src/include/common/: InputContextImpl.hpp  InputProcessorImpl.hpp
src/include/imm/: ImmCompositionImpl.hpp  ImmIngameIMEImpl.hpp  ImmInputContextImpl.hpp
src/include/tf/: ComBSTR.hpp  ComObjectBase.hpp  IThreadAssociate.hpp  TfCompositionImpl.hpp  TfFunction.hpp  TfIngameIMEImpl.hpp  TfInputContextImpl.hpp  TfInputProcessorImpl.hpp
testWnd/: CMakeLists.txt  main.cpp
testWnd/glad/: .gitignore  CMakeLists.txt
testWnd/glad/include/glad/: glad.h
testWnd/glad/src/: glad.c
testWnd/include/: InputWindow.hpp
testWnd/src/: InputWindow.cpp  InputWindow.hpp  main.cpp
